styles/main.css
* {
    margin:0;
    padding:0;
    list-style-type:none;
    box-sizing:border-box;
}
html, body {
    width:100%;
    background:#bbb;
    font-family: Hack, monospace;
}
.clear {
    clear:both;
}
.survey {
    width:360px;
    height:100%;
    background:#eee;
    margin:20px auto 0;
    /*box-shadow:0px 3px 12px 3px #888;*/
    box-shadow:0 5px 12px -4px #555;
}
.survey ul {
    width:100%;
    padding:10px;
}
.survey ul li {
    background:#fff;
    margin-bottom:20px;
    padding:5px;
    box-shadow:0 5px 6px -6px #000;
}
.survey ul li:last-child {
    margin-bottom:0;
}
.survey ul li header {
    font-weight:bold;
}

.color {
    width:100px;
    height:100px;
    margin:5px;
    float:left;
    cursor:pointer;
    border:2px solid #000;
}
#red {background:red;}
#orange {background:orange;}
#yellow {background:yellow;}
#green {background:green;}
#blue {background:blue;}
#purple {background:purple;}
#brown {background:#752;}
#pink {background:#f0f;}
#grey {background:grey;}

#light {background:#fff;}
#normal {background:#ccc;}
#dark {background:#000;}

